data/all_generated_tests/raw_wast_tests/call_indirect_InfiniteLoops_4174.wast
;; 3. **Test Description**: Design a test where `call_indirect` is used to call different functions conditionally, with a `br` instruction triggering a loop exit. The condition for `br` should depend on the return type from `call_indirect`.    - **Constraint Being Checked**: Accurate handling of multiple function signatures and associated return values.    - **Relation to Infinite Loops**: Type mismatch or stack inconsistency causing the loop exit condition to fail always, leading to an infinite loop.

(assert_invalid
  (module
    (type $sig1 (func (result i32)))
    (type $sig2 (func (result i64)))
    (table 2 funcref)
    (elem (i32.const 0) $func1 $func2)
    (func $func1 (type $sig1) (i32.const 42))
    (func $func2 (type $sig2) (i64.const 42))
    (func (param i32) (result i32)
      (block (result i32)
        (loop (result i32)
          (local.get 0)
          (call_indirect (type $sig1) (local.get 0))
          (br_if 1 (i32.eqz))
          (br 0)
        )
      )
    )
  )
  "type mismatch"
)